skins/common/shared.css
/* ... */
.tipsy-se .tipsy-arrow {
	bottom: -2px;
	right: 10px;
	background-position: 0% 100%;
}

#mw-clearyourcache,
#mw-sitecsspreview,
#mw-sitejspreview,
#mw-usercsspreview,
#mw-userjspreview {
	direction: ltr;
	unicode-bidi: embed;
}

/* Correct user & content directionality when viewing a diff */
.diff-currentversion-title,
.diff {
	direction: ltr;
	unicode-bidi: embed;
}
/* @noflip */ .diff-contentalign-right td {
	direction: rtl;
	unicode-bidi: embed;
}
/* @noflip */ .diff-contentalign-left td {
	direction: ltr;
	unicode-bidi: embed;
}
.diff-multi,
.diff-otitle,
.diff-ntitle,
.diff-lineno {
	direction: ltr !important;
	unicode-bidi: embed;
}

#mw-revision-info,
#mw-revision-info-current,
#mw-revision-nav {
	direction: ltr;
	display: inline;
}

/* Images */

/* @noflip */ div.tright,
div.floatright,
table.floatright {
	clear: right;
	float: right;
}
/* @noflip */ div.tleft,
div.floatleft,
table.floatleft {
	float: left;
	clear: left;
}
div.floatright,
table.floatright,
div.floatleft,
table.floatleft {
	position: relative;
}

/* bug 12205 */
#mw-credits a {
	unicode-bidi: embed;
}

/* Accessibility */
.mw-jump,
#jump-to-nav {
	overflow: hidden;
	height: 0;
	zoom: 1; /* http://webaim.org/techniques/skipnav/#iequirk */
}

/* Print footer should be hidden by default in screen. */
.printfooter {
	display: none;
}

/* For developpers */
.xdebug-error {
	position: absolute;
	z-index: 99;
}

.mw-editsection,
.toctoggle {
	-moz-user-select: none;
	-webkit-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

/* Display editsection links smaller and next to headings */
.mw-editsection,
.mw-editsection-like {
	font-size: small;
	font-weight: normal;
	margin-left: 1em;
	vertical-align: baseline;
	/* Reset line-height; headings tend to have it set to larger values */
	line-height: 1em;
	/* As .mw-editsection is a <span> (inline element), it is treated as part */
	/* of the heading content when selecting text by multiple clicks and thus */
	/* selected together with heading content, despite the user-select: none; */
	/* rule set above. This enforces non-selection without changing the look. */
	display: inline-block;
}

/* Correct directionality when page dir is different from site/user dir */
/* @noflip */
.mw-content-ltr .mw-editsection,
.mw-content-rtl .mw-content-ltr .mw-editsection {
	margin-left: 1em;
}
/* @noflip */
.mw-content-rtl .mw-editsection,
.mw-content-ltr .mw-content-rtl .mw-editsection {
	margin-right: 1em;
}

